@startuml

title __BUILDER's Class Diagram__\n


      namespace builder {
        interface builder.Builder {
            {abstract} + Build()
            {abstract} + addText()
            {abstract} + lineBounds()
            {abstract} + lineCircle()
        }
      }

  

      namespace builder {
        class builder.BuilderIndicatorMini {
            ~ pane : Pane
            + Build()
            + addText()
            + lineBounds()
            + lineCircle()
            + remove()
        }
      }



      namespace builder {
        class builder.Director {
            + Constr()
        }
      }

  


      namespace builder {
        class builder.Indicator {
            - panel : HBox
            + add()
            + remove()
            + show()
        }
      }

  

  builder.BuilderIndicatorMini .up.|> builder.Builder
  builder.BuilderIndicatorMini o-- builder.Indicator : indicator
  builder.Director o-- builder.BuilderIndicatorMini : builder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
